--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,9 @@
   <modules>
     <module>rpc-framework-core</module>
     <module>rpc-framework-common</module>
+    <module>hello-service-api</module>
+    <module>example-server</module>
+    <module>example-client</module>
   </modules>
 
   <properties>
