--- a/rpc-framework-core/pom.xml
+++ b/rpc-framework-core/pom.xml
@@ -35,5 +35,17 @@
             <artifactId>curator-recipes</artifactId>
             <version>5.7.0</version>
         </dependency>
+        <!-- kryo -->
+        <dependency>
+            <groupId>com.esotericsoftware</groupId>
+            <artifactId>kryo</artifactId>
+            <version>5.6.0</version>
+        </dependency>
+        <!-- netty-all -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>5.0.0.Alpha2</version>
+        </dependency>
     </dependencies>
 </project>
